[gd_scene load_steps=10 format=3 uid="uid://ce4npbnuxwjxj"]

[ext_resource type="Script" path="res://scripts/SwitchSceneControler.gd" id="1_0wbnk"]
[ext_resource type="Texture2D" uid="uid://cccnl7g7264t6" path="res://sprites/Player/Animation_cote.png" id="1_qfmic"]
[ext_resource type="Texture2D" uid="uid://bc12gp3063ia3" path="res://sprites/Player/Paladin.png" id="2_7f84y"]
[ext_resource type="Script" path="res://scripts/ButtonGrabFocus.gd" id="3_nwqyf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m2d4k"]
atlas = ExtResource("1_qfmic")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dj0s8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2d4k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hxy3u"]
atlas = ExtResource("2_7f84y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fffd2"]
atlas = ExtResource("2_7f84y")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cpc4h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxy3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fffd2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CharacterChoice" type="Node2D"]
script = ExtResource("1_0wbnk")
scene_name = "CharacterChoice"

[node name="Start" type="Button" parent="."]
offset_left = 505.0
offset_top = 506.0
offset_right = 687.0
offset_bottom = 548.0
text = "Play"
script = ExtResource("3_nwqyf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 428.0
offset_top = 444.0
offset_right = 495.0
offset_bottom = 510.0
scale = Vector2(1.2, 1)

[node name="Harpon" type="AnimatedSprite2D" parent="VBoxContainer"]
position = Vector2(25, -68)
scale = Vector2(4.16667, 5)
sprite_frames = SubResource("SpriteFrames_dj0s8")
autoplay = "default"

[node name="ButtonHarpon" type="Button" parent="VBoxContainer/Harpon"]
offset_left = -5.99999
offset_top = 13.6
offset_right = 61.0
offset_bottom = 44.6
scale = Vector2(0.226812, 0.221496)
text = "Harpon"
script = ExtResource("3_nwqyf")

[node name="Chevalier" type="AnimatedSprite2D" parent="VBoxContainer"]
position = Vector2(247.5, -64)
scale = Vector2(4.16667, 5)
sprite_frames = SubResource("SpriteFrames_cpc4h")

[node name="ButtonEpee" type="Button" parent="VBoxContainer/Chevalier"]
offset_left = -8.6
offset_top = 12.8
offset_right = 58.4
offset_bottom = 43.8
scale = Vector2(0.230759, 0.230759)
text = "Ep√©e"

[node name="PlayerClass" type="Label" parent="."]
offset_left = 413.0
offset_top = 126.0
offset_right = 766.0
offset_bottom = 206.0

[connection signal="pressed" from="VBoxContainer/Harpon/ButtonHarpon" to="." method="_on_button_harpon_pressed"]
[connection signal="pressed" from="VBoxContainer/Chevalier/ButtonEpee" to="." method="_on_button_epee_pressed"]
